# streamlit-example

./: pyproject.toml  readme.md
iris/: app.py  start.py
model/: IrisClassifier.pkl
notebooks/: notebook.ipynb
