[project]
name = "iris"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey Dorokhov",email = "seregapax@gmail.com"}
]
requires-python = ">=3.12"

[tool.poetry.scripts]
start = "iris.start:start"

[tool.poetry.dependencies]
streamlit = "^1.43.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"